# babycpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
cmakeutils/: code_gen.txt
cmakeutils/modules/: FindMaya.cmake
examples/mayaNode/: CMakeLists.txt  llvmNode.cpp  llvmNode.h  pluginMain.cpp
include/: FactoryAST.h  allocator.h  codegen.h  lexer.h  parser.h  slabAllocator.h
include/core/: AST.h  allocator.h  codegen.h  database.h  diagnostic.h  diagnosticCodes.h  factoryAST.h  lexer.h  parser.h  slabAllocator.h
include/jit/: jit.h
include/repl/: repl.h
src/: CMakeLists.txt  FactoryAST.cpp  codegen.cpp  lexer.cpp  parser.cpp  slabAllocator.cpp
src/core/: AST.cpp  CMakeLists.txt  codegen.cpp  database.cpp  lexer.cpp  parser.cpp  slabAllocator.cpp
src/jit/: CMakeLists.txt  jit.cpp
src/repl/: CMakeLists.txt  repl.cpp  replExec.cpp
tests/: CMakeLists.txt  allocatorTests.cpp  code_gen_tests.cpp  lexer_tests.cpp  parser_tests.cpp
tests/core/: CMakeLists.txt  allocatorTests.cpp  code_gen_tests.cpp  coge_gen_struct_test.cpp  lexer_tests.cpp  parser_struct_tests.cpp  parser_tests.cpp
tests/jit/: CMakeLists.txt  jitTests.cpp
tests/repl/: CMakeLists.txt  replTests.cpp
tests/testdata/: alloca1.ll  avg.ll  basicIfStatement.ll  callInFunc.ll  complexAdd.ll  floatDereferenceFunction.ll  floatPointerAssignNull.ll  floatPointerAssignNullInNotDeclaration.ll  floatPointerReturnTypeCorrect.ll  floatToIntPointerCast.ll  floatToVoidPointerCast.ll  forLoop1.ll  freeTest.ll  functionWithIfstatement.ll  functionWithIfstatement2.ll  functionWithIfstatement3.ll  implicitBoolSupportInComparison.ll  intDereferenceForWritingPointer.ll  intDereferenceFunction.ll  intPointerAssignNull.ll  intPointerAssignNullInNotDeclaration.ll  intToFloatPointerCast.ll  mallocTest.ll  pointerFloatAddition.ll  pointerIntAddition.ll  simpleAdd.ll  testVoidFunction.ll  voidToIntPointerCast.ll
